Fix GetActivitiesByUser
